--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,11 +8,7 @@
 </head>
 <body>
 
-<<<<<<< HEAD
-<h1>Fullstack</h1>
-=======
-<h1>Fullstack Websites</h1>
->>>>>>> bfdeda0613a9ea6eaa7615471b5f67193550972f
+<h1>Fullstack Website</h1>
 <p id="backendMsg">Loading...</p>
 
 <form id="contactForm">
